--- a/src/web2/src/App.css
+++ b/src/web2/src/App.css
@@ -2,6 +2,25 @@
   text-align: center;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  position: absolute;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #1bbbff;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
